--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+.framgia-ci-reports/
+.framgia-ci-result.temp.yml
+
+database.yml
+application.yml
+credentials.yml.enc
