--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ inherit_from:
 
 # Common configuration.
 AllCops:
+  NewCops: enable
   # Include gemspec and Rakefile
   Include:
     - 'app/**/*'
@@ -281,7 +282,7 @@ Style/LambdaCall:
     - call
     - braces
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 80
   AllowURI: true
   Exclude:
