--- a/config/settings.yml
+++ b/config/settings.yml
@@ -23,3 +23,4 @@ user:
   password_min: 6
   password_max: 20
   email_pattern: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
+  gavatar_size: 80
