--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ database.yml
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Ignore application configuration
+/config/application.yml
