--- a/config/settings.yml
+++ b/config/settings.yml
@@ -26,6 +26,19 @@ user:
   gavatar_size: 80
   gravatar_for_user_size: 50
 
+pagy:
+  page_size: 20
+
+micropost:
+  content_max: 140
+  accept_path: "image/jpeg,image/gif,image/png"
+  image_path: ["image/jpeg", "image/gif", "image/png"]
+  resize_to_limit: [500, 500]
+  image_size: 5
+
+digit_140: 140
+digit_50: 50
+page_10: 10
 true: "1"
 false: "0"
 password_reset_expired: 2
